# jma-api-forecast

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md  research.md
.github/workflows/: ci.yml
data/: all_forecasts.csv  all_forecasts.json
src/: bigquery_client.py  config.py  fetcher.py  locations.toml  main.py  models.py  saver.py
tests/: test_bigquery_client.py  test_config.py  test_fetcher.py  test_saver.py
