[project]
name = "jma-api-forecast"
version = "0.1.0"
description = "気象庁の JSON API から週間予報データを取得して CSV/JSON に保存するツール"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.0.0",
    "pydantic>=2.13.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=8.0",
    "types-requests>=2.33.0.20260503",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
